--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="143dp"
         android:layout_marginEnd="144dp"
-        android:layout_marginBottom="170dp"
+        android:layout_marginBottom="220dp"
         android:backgroundTint="#FFFDD0"
         android:text="Start?"
         android:textColor="#000000"
@@ -69,14 +69,28 @@
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginStart="159dp"
-        android:layout_marginTop="49dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="162dp"
+        android:backgroundTint="#FFFDD0"
+        android:text="Results"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/StartButton" />
+        
+    <Button
+        android:id="@+id/EditQuestionsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginStart="159dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="162dp"
         android:layout_marginBottom="72dp"
         android:backgroundTint="#FFFDD0"
-        android:text="Results"
+        android:text="Edit Questions"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/StartButton" />
+        app:layout_constraintTop_toBottomOf="@+id/ResultsButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
