--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,12 +85,24 @@
         android:layout_marginStart="159dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="162dp"
-        android:layout_marginBottom="72dp"
+        android:layout_marginBottom="30dp"
         android:backgroundTint="#FFFDD0"
         android:text="Edit Questions"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ResultsButton" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/editorToggleSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="30dp"
+        android:text="Enable Question Editor"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ResultsButton" />
+        app:layout_constraintTop_toBottomOf="@+id/EditQuestionsButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
