--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,6 +99,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="30dp"
+        android:backgroundTint="#FFFDD0"
         android:text="Enable Question Editor"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
